# mailwarmup

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: index.md
mailwarmup/: mailwarmup.py
mailwarmup/Mail/: sd_mail.py
src/: sender.py
src/Mail/: sd_mail.py
