[tool.poetry]
name = "mailwarmup"
version = "1.0.0"
description = "Script to constantly send e-mails and reduce the chances of falling into spam."
authors = ["Erick Medrado <erickdargains@gmail.com>"]
classifiers = [
    "License :: MIT License",
]

[project.urls]
Source = "https://github.com/edargains/mailwarmup.git"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
mkdocs = "^1.4.2"
datetime = "^5.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pip-audit = "^2.4.14"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
